@@ -1,3 +1,8 @@
+Fri Dec 24 02:52:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (io_reopen, rb_io_reopen): prohibit to change access mode for
+	  special IO ports.  [ruby-dev:25225]
+
 Fri Dec 24 02:22:53 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/syck/rubyext.c (syck_loader_transfer): check type conversion.
